# figure-designer

./: .clang-format  .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  centralwidget.cpp  centralwidget.h  circlesceneobject.cpp  circlesceneobject.h  clicktracker.cpp  clicktracker.h  figure-designer.sln  figure-designer.vcxproj  figure-designer.vcxproj.filters  figurecloner.cpp  figurecloner.h  figuregraphicsview.cpp  figuregraphicsview.h  figurehandler.cpp  figurehandler.h  figurescene.cpp  figurescene.h  figureview.cpp  figureview.h  main.cpp  mainwindow.cpp  mainwindow.h  modificationhandler.cpp  modificationhandler.h  rectanglesceneobject.cpp  rectanglesceneobject.h  resources.qrc  sceneobject.cpp  sceneobject.h  squaresceneobject.cpp  squaresceneobject.h  trianglesceneobject.cpp  trianglesceneobject.h
figure-designer/: CMakeLists.txt  centralwidget.cpp  centralwidget.h  main.cpp  mainwindow.cpp  mainwindow.h
figures/: CMakeLists.txt  circle.cpp  circle.h  completedrawing.cpp  completedrawing.h  continuedrawing.cpp  continuedrawing.h  deserializefromjson.cpp  deserializefromjson.h  figureaction.cpp  figureaction.h  figurebase.cpp  figurebase.h  figures.cpp  figures.h  point.cpp  point.h  rectangle.cpp  rectangle.h  selectionrectangle.cpp  selectionrectangle.h  serializetojson.cpp  serializetojson.h  square.cpp  square.h  startdrawing.cpp  startdrawing.h  triangle.cpp  triangle.h
